--- a/Blank1200px.css
+++ b/Blank1200px.css
@@ -17,7 +17,7 @@ header {
   grid-column: span 12;
   background-color:#76748D;
   color: #FFFFFF;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 20px;
   margin-bottom: 24px;
 }
@@ -45,7 +45,8 @@ nav li a{
   display: block;
   background-color: #76748D;
   color: white;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  text-shadow: 2px 2px 2px #000000;
   font-size: 25px;
   font-weight: bold;
   text-decoration: none;
@@ -55,9 +56,15 @@ nav li a{
   margin left: 200px;
 }
 
+nav li a:hover {
+  background-color: #7A5DA1;
+
+}
+
 main{
   grid-column: span 8;
   font-size: 20px;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 aside{
@@ -68,7 +75,18 @@ footer{
   grid-column: span 12;
   color: #FFFFFF;
   background-color: #76748D;
-  text-align: left;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 25px;
+  border: 2px solid black;
+  text-align: center;
+}
+.roundedbox {
+  padding: 10px;
+  border: 2px solid black;
+  background-color: #878787;
+  border-radius: 10px;
+}
+
+h1{
+  text-shadow: 2px 2px 2px #000000;
 }
